--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,9 +31,8 @@
         <nav class="brown accent-4" style="border-style: solid; border-color: burlywood;">
             <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="/results" style="font-family: cursive">Add One to the List!</a></li>
-                <li><a href="/index" style="font-family: cursive">Pick your cocktail!</a></li>
-                <li><a href="" style="font-family: cursive">The Bootleggers!</a></li>
+                <li><a href="/add" style="font-family: cursive">Add One to the List!</a></li>
+                <li><a href="/index" style="font-family: cursive">Cocktail Menu!</a></li>
             </ul>
         </nav>
     </div>
@@ -42,7 +41,9 @@
     {{{body}}}
 
 
-
+    <div class="footer">
+        <p>&copy;#Aimee, Patrick, Miguel, and Miguel 2020 </p>
+    </div>
 
 </body>
 
