the home handlebars has been added so the cocktail can be selected by liquor, so a block of code in routes.js file was added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,16 +9,21 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Google fonts -->
+  
     <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
 
     <script src="https://code.jquery.com/jquery.js"></script>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -31,6 +36,7 @@
         <nav class="brown accent-4" style="border-style: solid; border-color: burlywood;">
             <a href="#!" class="brand-logo center" style="font-family: cursive;">The SPEAKEASY</a>
             <ul class="right hide-on-med-and-down">
+                <li><a href="/" style="font-family: cursive">Home</a></li>
                 <li><a href="/index" style="font-family: cursive">Cocktail Menu!</a></li>
                 <li><a href="/add" style="font-family: cursive">Add One to the List!</a></li>
             </ul>
