--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -22,7 +22,8 @@
             <h2 style="font-family: cursive; text-align: center;">Results</h2>
             <div class="row">
                 <h4 style="font-family: cursive; text-align: center;" id="sDrink">{{drink}}</h4>
-                <img class="circle responsive-img" src="{{image}}" id="addImg">
+                <img class="circle responsive-img" src="{{image}}" id="addImg" width="300" height="300"
+                    style="margin-left:200px;">
             </div>
             <div class="row">
                 <h5 style="font-family: cursive">Ingredients:</h5>
