--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -18,7 +18,7 @@
         <form class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="cat_name1" type="text">
+                    <input id="cat_name1" type="text" placeholder="only this categories: whiskey, tequila, vodka or rum">
                     <label class="active" for="cat_name"><span style="font-weight: bold;color:black;">Category</label>
                 </div>
             </div>
@@ -58,37 +58,4 @@
     </div>
 </div>
 
-<script type="text/javascript">
-
-    // When user clicks add-btn
-    $("#fm1").on("click", function (event) {
-        event.preventDefault();
-
-        // Make a new Drink object
-        var newDrink = {
-            category: $("#cat_name1").val().trim(),
-            drink: $("#drinkimage_name").val().trim(),
-            image: $("#drinkimage_name").val().trim(),
-            ingredients: $("#textarea1").val().trim(),
-            method: $("#textarea2").val().trim()
-        };
-        console.log(newDrink);
-        // Send an AJAX POST-request with jQuery
-        $.post("/add", newDrink)
-            // On success, run the following code
-            .then(function (data) {
-                // Log the data we found
-                console.log(data);
-            });
-
-        // Empty each input box by replacing the value with an empty string
-            $("#cat_name1").val(""),
-            $("#drinkimage_name").val(""),
-            $("#drinkimage_name").val(""),
-            $("#textarea1").val(""),
-            $("#textarea2").val("")
-
-    });
-
-
-</script>
+<script src="/js/add.js" type="text/javascript"></script>
