--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="drinkimage_name" type="text">
+                    <textarea id="drinkimage_name" class="materialize-textarea"></textarea>
                     <label class="active" for="drinkimage_name"><span style="font-weight: bold;color:black;">Cocktail's
                             Image</span></label>
                 </div>
